🔧 Fix SonarQube code quality issues
✅ Security Fixes:
- Remove hardcoded email password from EmailConfig.java
- Use environment variables for sensitive configuration

✅ Code Quality Improvements:
- Replace Stream.collect(Collectors.toList()) with Stream.toList() in 18 files
- Fix literal duplication by adding role constants in SecurityConfig.java
- Replace string concatenation with text blocks in EmailSimulationController.java
- Fix primitive boolean expression in DataInitializer.java
- Add SMTP timeout constant to eliminate literal duplication

🎯 Impact: Resolves multiple SonarQube issues including:
- 1 Security Blocker (compromised password)
- 21 Reliability issues (stream collect)
- 367 Maintainability issues (literal duplication, string concatenation)

All changes compile successfully and maintain functionality.